# UF_IPMC

./: README.md  UF_IPMC_Manual.docx  ipmc.service
CONFIG/: CONFIG.toml
SDR/: SDR0.toml  SDR1.toml  SDR2.toml  SDR3.toml  SDR4.toml  SDR5.toml  SDR6.toml  SDR7.toml
SDR_OCTOPUS_QSFPDD/: SDR10.toml  SDR2.toml  SDR4.toml  SDR5.toml  SDR6.toml  SDR7.toml  SDR8.toml  SDR9.toml
SRC/: CMakeCache.txt  CMakeLists.txt  IPMC_EXEC  Makefile  cmake_install.cmake  event.c  event.h  i2c-sensor.c  i2c-sensor.h  i2c.c  ipmc.c  ipmc.h  ipmi.c  ipmi.h  logger.c  main.c  octopus.c  octopus.h  picmg.c  picmg.h  semaphore.c  semaphore.h  sensor.c  sensor.h  testp.c~  timer.c  timer.h  user-payload-octopus-qsfp.c  user-payload-octopus-qsfp.h  user-payload-octopus-qsfpdd.c  user-payload.c  user-payload.h  user-sensor-octopus-qsfp.c  user-sensor-octopus-qsfp.h  user-sensor-octopus-qsfpdd.c  user-sensor-octopus-qsfpdd.h  user-sensor.c  user-sensor.h  ws.c  ws.h
TEMPLATES/: SDR*.toml  template.c
